# sdl2-conways-game-of-life

./: README.md  meson.build
include/core/: app.h  config.h
include/helper/: logger.h
src/: main.cpp
src/core/app/: app.cpp  app_clean.cpp  app_handle_event.cpp  app_init.cpp  app_render.cpp  app_run.cpp  app_update.cpp
src/helper/: logger.cpp
